test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/prefix_in_ternary.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  return
  (
  ++
  identifier(a)
  ?
  ++
  identifier(a)
  :
  const int(0)
  )
  ;
  }
