test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/use_label_as_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  identifier(a)
  :
  identifier(x)
  =
  identifier(a)
  ;
  return
  const int(0)
  ;
  }
